# imu

./: .gitignore  .gitmodules  Makefile  README.md
client/: CMakeLists.txt  FindHIDAPI.cmake  FindLibUSB.cmake  Makefile
client/assets/: frag.glsl  vertex.glsl
client/include/gfx/: camera.hh  context.hh  cube.hh  depth_pass.hh  draw_pass.hh  framebuffer.hh  image.hh  light.hh  material.hh  mesh.hh  model.hh  shader.hh  texture.hh
client/include/peripheral/: peripheral.hh
client/include/usb/: usbservice.hh
client/include/utils/: fileloader.hh
client/src/: main.cc
client/src/gfx/: camera.cc  cube.cc  frag.glsl  framebuffer.cc  image.cc  mesh.cc  model.cc  shader.cc  texture.cc
client/src/utils/: fileloader.cc  loader.cc
debug/: stm32f3disco.cfg
firmware/: .gitignore  Makefile
firmware/freertos/include/freertos/: FreeRTOS.h  event_groups.h  message_buffer.h  portable.h  queue.h  semphr.h  task.h  timers.h
firmware/freertos/src/: event_groups.c  list.c  queue.c  stream_buffer.c  tasks.c  timers.c
firmware/freertos/src/GCC/ARM_CM4_MPU/: mpu_wrappers.c  port.c
firmware/freertos/src/MemMang/: heap_4.c
firmware/include/: int.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
firmware/include/st/BSP/: stm32f3_discovery_gyroscope.h
firmware/src/: int.c  isr.c  main.c  selftest.c  stm32f3xx_it.c
firmware/src/startup/: stm32f303xc.ld  stm32f303xc.s
firmware/tools/: .gitignore  Makefile  stm32f3discovery.cfg
include/: main.h  mems.h  selftest.h
include/st/BSP/: stm32f3_discovery_accelerometer.h
include/st/CMSIS/Device/ST/STM32F3xx/Include/: stm32f3xx.h
src/: main.c
src/startup/: stm32f303xc.ld
